--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -41,7 +41,7 @@ jobs:
       needs: build
       runs-on: unbuntu-latest
       steps:
-        - name: actions/checkout@v3
+        - uses: actions/checkout@v3
         - name: Download Build
           uses: actions/download-artifact@v2
           with:
