--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -5,13 +5,12 @@ name: Firebase CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,37 +19,36 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - name: npm install, build and test
-      run: |
-        npm install
-        npm build
-    - name: Archive Build
-      uses: actions/upload-artifact@v2
-      with: 
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - run: npm ci
+      - name: npm install, build and test
+        run: |
+          npm install
+          npm build
+      - name: Archive Build
+        uses: actions/upload-artifact@v2
+        with:
           name: build
           path: build
   deploy:
-      name: Deploy
-      needs: build
-      runs-on: unbuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-        - name: Download Build
-          uses: actions/download-artifact@v2
-          with:
-            name: build
-            path: build
-        - name: Deploy to Firebase
-          uses: w9jds/firebase-action@master
-          with: 
-            args: deploy --only hosting
-          env:
-            FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-      
+    name: Deploy
+    needs: build
+    runs-on: unbuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Download Build
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: build
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
