--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
   },
   "scripts": {
     "start:dev": "env-cmd -f .env.development react-scripts start",
-    "start": "env-cmd -f .env.production react-scripts start",
-    "build": "env-cmd -f .env.production react-scripts build",
+    "start": "env-cmd -f .env react-scripts start",
+    "build": "env-cmd -f .env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start:all": "concurrently --kill-others \"npm run dev --prefix ../server\" \"npm run start:dev\""
